# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# This file contains build rules for the main binary of p4_symbolic.

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_binary(
    name = "main",
    srcs = [
        "main.cc",
    ],
    deps = [
        ":parser",
        "//gutil:io",
        "//gutil:status",
        "//p4_symbolic/bmv2",
        "//p4_symbolic/sai:parser",
        "//p4_symbolic/symbolic",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_library(
    name = "parser",
    srcs = ["parser.cc"],
    hdrs = ["parser.h"],
    deps = [
        "//gutil:io",
        "//gutil:proto",
        "//gutil:status",
	"//p4_pdpi:ir",
	"//p4_pdpi:ir_cc_proto",
        "//p4_symbolic/bmv2",
        "//p4_symbolic/ir",
        "//p4_symbolic/ir:ir_cc_proto",
        "//p4_symbolic/ir:pdpi_driver",
        "//p4_symbolic/symbolic",
	"@com_github_p4lang_p4runtime//:p4runtime_cc_proto",
        "@com_google_absl//absl/types:span",
    ],
)

cc_library(
    name = "z3_util",
    srcs = ["z3_util.cc"],
    hdrs = ["z3_util.h"],
    deps = [
        "//gutil:status",
        "//p4_pdpi/string_encodings:hex_string",
        "@com_github_z3prover_z3//:api",
        "@com_gnu_gmp//:gmp",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "z3_util_test",
    srcs = ["z3_util_test.cc"],
    deps = [
        ":z3_util",
        "@com_google_googletest//:gtest_main",
    ],
)
